docs/api/qiskit-ibm-runtime/0.34/visualization.mdx
---
title: visualization (v0.34)
description: API reference for qiskit_ibm_runtime.visualization in qiskit-ibm-runtime v0.34
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit_ibm_runtime.visualization
---

<span id="visualization-qiskit-ibm-runtime-visualization" />

<span id="module-qiskit_ibm_runtime.visualization" />

# Visualization

`qiskit_ibm_runtime.visualization`

A suite of functions for visualizing qiskit-ibm-runtime’s objects.

## Functions

|                                                                                                                               |                                                                                                                                         |
| ----------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------- |
| [`draw_execution_spans`](visualization-draw-execution-spans "qiskit_ibm_runtime.visualization.draw_execution_spans")          | Draw one or more [`ExecutionSpans`](execution-span-execution-spans "qiskit_ibm_runtime.execution_span.ExecutionSpans") on a bar plot.   |
| [`draw_layer_error_map`](visualization-draw-layer-error-map "qiskit_ibm_runtime.visualization.draw_layer_error_map")          | Draw a map view of a [`LayerError`](utils-noise-learner-result-layer-error "qiskit_ibm_runtime.utils.noise_learner_result.LayerError"). |
| [`draw_layer_errors_swarm`](visualization-draw-layer-errors-swarm "qiskit_ibm_runtime.visualization.draw_layer_errors_swarm") | Draw a swarm plot for the given list of layer errors.                                                                                   |
| [`draw_zne_evs`](visualization-draw-zne-evs "qiskit_ibm_runtime.visualization.draw_zne_evs")                                  | Plot the zero noise extrapolation data in an `EstimatorPubResult`.                                                                      |
| [`draw_zne_extrapolators`](visualization-draw-zne-extrapolators "qiskit_ibm_runtime.visualization.draw_zne_extrapolators")    | Plot the zero noise extrapolation data in an `EstimatorPubResult`.                                                                      |

