docs/api/qiskit-ibm-runtime/0.47/visualization.mdx
---
title: visualization (v0.47)
description: API reference for qiskit_ibm_runtime.visualization in qiskit-ibm-runtime v0.47
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit_ibm_runtime.visualization
---

<span id="visualization-qiskit-ibm-runtime-visualization" />

<span id="module-qiskit_ibm_runtime.visualization" />

# Visualization

`qiskit_ibm_runtime.visualization`

A suite of functions for visualizing qiskit-ibm-runtime’s objects.

## Functions

|                                                                                                                                                                                |                                                                                                                                                                           |
| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [`draw_chunk_timings`](/docs/api/qiskit-ibm-runtime/0.47/visualization-draw-chunk-timings "qiskit_ibm_runtime.visualization.draw_chunk_timings")                               | Draw one or more `ChunkTiming` on a bar plot.                                                                                                                             |
| [`draw_execution_spans`](/docs/api/qiskit-ibm-runtime/0.47/visualization-draw-execution-spans "qiskit_ibm_runtime.visualization.draw_execution_spans")                         | Draw one or more [`ExecutionSpans`](/docs/api/qiskit-ibm-runtime/0.47/execution-span-execution-spans "qiskit_ibm_runtime.execution_span.ExecutionSpans") on a bar plot.   |
| [`draw_layer_error_map`](/docs/api/qiskit-ibm-runtime/0.47/visualization-draw-layer-error-map "qiskit_ibm_runtime.visualization.draw_layer_error_map")                         | Draw a map view of a [`LayerError`](/docs/api/qiskit-ibm-runtime/0.47/utils-noise-learner-result-layer-error "qiskit_ibm_runtime.utils.noise_learner_result.LayerError"). |
| [`draw_layer_errors_swarm`](/docs/api/qiskit-ibm-runtime/0.47/visualization-draw-layer-errors-swarm "qiskit_ibm_runtime.visualization.draw_layer_errors_swarm")                | Draw a swarm plot for the given list of layer errors.                                                                                                                     |
| [`draw_zne_evs`](/docs/api/qiskit-ibm-runtime/0.47/visualization-draw-zne-evs "qiskit_ibm_runtime.visualization.draw_zne_evs")                                                 | Plot the zero noise extrapolation data in an `EstimatorPubResult`.                                                                                                        |
| [`draw_zne_extrapolators`](/docs/api/qiskit-ibm-runtime/0.47/visualization-draw-zne-extrapolators "qiskit_ibm_runtime.visualization.draw_zne_extrapolators")                   | Plot the zero noise extrapolation data in an `EstimatorPubResult`.                                                                                                        |
| [`draw_circuit_schedule_timing`](/docs/api/qiskit-ibm-runtime/0.47/visualization-draw-circuit-schedule-timing "qiskit_ibm_runtime.visualization.draw_circuit_schedule_timing") | Draw a circuit schedule timing for `CircuitSchedule`.                                                                                                                     |

